src/components/base/logo/Logo.module.css
.display_flex {
  height: var(--pt6);
  width: fit-content;
  display: flex;
  align-items: center;
  gap: var(--pt1);
}

.defaultLogo {
  display: block;
  height: 100%;
  width: auto;
  max-width: 100%;
  color: var(--logo-color, var(--blue));
}

.defaultLogo *[data-text="true"] {
  color: var(--logo-text-color, var(--mine-shaft));
}

